devtron-ingress-dcflash-http.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-devtron-dcflash
  namespace: devtroncd
  annotations:
#    ingress.kubernetes.io/rewrite-target: /
    kubernetes.io/ingress.class: nginx
#    cert-manager.io/cluster-issuer: letsencrypt-production
#    nginx.ingress.kubernetes.io/proxy-body-size: 32m
#    kubernetes.io/tls-acme: "true"
#    nginx.ingress.kubernetes.io/auth-type: basic
#    nginx.ingress.kubernetes.io/auth-secret: basic-auth
#    nginx.ingress.kubernetes.io/auth-realm: "Authentication Required - jupyter"
#    ingress.kubernetes.io/rewrite-target
spec:
  rules:
  - host: dcflash.asrc.albany.edu
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: devtron
            port:
              number: 8080
#  tls:
#    - hosts:
#      - dcflash.asrc.albany.edu
#      secretName: letsencrypt-production
---
